# paperqa

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: BUILDSPEC.md  ERRATA.md  GROUNDING_AUDIT.md  PHASE1.md
engine/: __init__.py  audit.py  cli.py  config.py  report.py  run.py  settings.py
explorations/_template/: README.md  config.yaml  eval_questions.yaml
explorations/sc_brainstorming/: config.yaml  eval_questions.yaml
